compiler/actonc/test/syntaxerrors/err9.golden
Building file test/syntaxerrors/err9.act using temporary scratch directory

ERROR: Error when compiling err9 module: Syntax error

test/syntaxerrors/err9.act:1:8:
  |
1 | f : [A]
  |        ^
unexpected newline
expecting "=>"

- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - 

